fix missing padding on keep app

--- a/apps/MissKeep/assets/css/cmps/KeepApp.css
+++ b/apps/MissKeep/assets/css/cmps/KeepApp.css
@@ -1,3 +1,6 @@
+.keep-app {
+  padding-bottom: 20px;
+}
 
 .keep-main-layout {
     width: 95vw;
